--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.12.0",
-    "mongoose": "^5.12.14"
+    "mongoose": "^5.12.14",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
